--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4",
     "@hookform/resolvers": "^3.9.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
+    "framer-motion": "^11.11.7",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
