add pdf session

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "framer-motion": "^11.11.8",
+    "html2pdf": "^0.0.11",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
